ch6/myapp-ingress-generic.yaml
kind: Ingress 
apiVersion: networking.k8s.io/v1beta1 
metadata: 
  annotations: 
    kubernetes.io/ingress.class: traefik|contour|nginx
    ingress.kubernetes.io/rewrite-target: / 
  name: myapp-ingress 
  namespace: default 
spec: 
  rules: 
    - host: 192.168.0.241.nip.io
      http: 
        paths: 
          - backend: 
              serviceName: myapp 
              servicePort: 80
