ch6/myapp-ingress-tls-contour-2.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: httpbinproxy
spec:
  virtualhost:
    fqdn: myapp-test-contour.test
    tls:
      secretName: httpbinproxy
    rateLimitPolicy:
      local:
        requests: 3
        unit: minute
        burst: 1
  routes:
  - services:
    - name: myapp
      port: 80
