ch6/myapp-ingress-tls-nginx-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress-nginx-public
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-staging
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
      - myapp-test-nginx.test
    secretName: myapp-tls-nginx-public
  rules:
  - host: myapp-test-nginx.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp
            port:
              number: 80
