ch6/myapp-ingress-tls-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: self-signed-issuer
#    ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: "mysecret"
#    ingress.kubernetes.io/auth-remove-header: "true"
spec:
  tls:
  - hosts:
      - myapp-test-nginx.test
    secretName: myapp-tls-nginx
  rules:
  - host: myapp-test-nginx.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myapp
            port:
              number: 80
